# Smart_Alarm

./: README.md
firmware/esp32_c5_csi/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32_c5_csi/main/: CMakeLists.txt  csi_data.c  csi_data.h  main.c  person_detector.c  person_detector.h  uart_comm.c  uart_comm.h
firmware/esp32_c5_transmitter/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/esp32_c5_transmitter/main/: CMakeLists.txt  Kconfig.projbuild  csi_transmitter.c  csi_transmitter.h  main.c
firmware/wtdkp4c5_c5_slave/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
firmware/wtdkp4c5_c5_slave/main/: CMakeLists.txt  Kconfig.projbuild  main.c  sdio_slave_csi.c  sdio_slave_csi.h
firmware/wtdkp4c5_main/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.old  烧录说明.md
firmware/wtdkp4c5_main/main/: CMakeLists.txt  Kconfig.projbuild  alarm_manager.c  alarm_manager.h  csi_bridge.h  csi_processor.c  csi_processor.h  display.c  idf_component.yml  main.c  sdio_host_csi.c  sdio_host_csi.h  storage.c  storage.h  uart_comm.c  uart_comm.h  web_server.c  web_server.h
firmware/wtdkp4c5_main/main/web/: index.html  script.js  style.css
